k8s/evaluation-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: evaluation-service
  namespace: evaluation
spec:
  type: ClusterIP
  selector:
    app: evaluation-service
  ports:
    - port: 80
      targetPort: 8004
